[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ubicoders-vrobots-ipc"
version = "0.2.4"
description = "Ubicoders virtual robots IPC for PC"
authors = [{ name = "Elliot Lee", email = "info@ubicoders.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "flatbuffers==23.5.26",
  "fastapi",
  "uvicorn",
  "asyncio",
  "requests",
  "psutil",
  "dash",
  "plotly",
  "colorama",
  "matplotlib",
  "pyqt5",
  "pyqtgraph",
  "pandas",
  "scipy",
  "ipython",
  "ipykernel",
  "jupyterlab",
  "ipympl",
  "iceoryx2==0.7.0",
  "eclipse-zenoh==1.5.1",
  "opencv-python",
  "opencv-contrib-python",
  "ubicoders-vrobots-msgs==2.0.2",
]

[project.urls]
Homepage = "https://github.com/ubicoders0/vrobots-ipc"

[project.scripts]
list-topics = "ubicoders_vrobots_ipc.list_topics:main"
vrobot-node = "ubicoders_vrobots_ipc.vrobot_node:main"
vrobot-client = "ubicoders_vrobots_ipc.vrobot_client:main"
rtg-pub = "ubicoders_vrobots_ipc.rtg_pub:main"
rtg-sub = "ubicoders_vrobots_ipc.rtg_sub:main"
z-srv = "ubicoders_vrobots_ipc.z_srv:main"
z-srv-client = "ubicoders_vrobots_ipc.z_srv_client:main"

[tool.setuptools.packages.find]
where = ["src"]
